--- a/about.html
+++ b/about.html
@@ -21,18 +21,15 @@ header-img: "img/post-bg-rwd.jpg"
 
     <p>工作、学习之余，我还是一个健身爱好者，同时也非常喜欢篮球。</p>
 
-    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/lee1996">👉GitHub·BY</a>如果有什么问题，欢迎提出探讨~</p>
-
-    <p></p>
     
-    <h5>Talks</h5>
+    <!-- <h5>Talks</h5>
 
     <ul>
         <li><a href="https://github.com">GitHub</a></li>
         <li><a href="http://jekyll.com.cn/">jekyll</a></li>
         <li><a href="http://huangxuan.me/">Hux</a></li> 
         <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li>
-    </ul>
+    </ul> -->
 </div>
 
 <!-- English Version -->
